syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {
  rpc FindLog (LambdaRequest) returns (LambdaReply) {}
}

// The request message containing the user's name.
message LambdaRequest {
  int32 range = 1;
  string time = 2;
  string bucket = 3;
  string key = 4;
}

message LambdaReply {
  bool result = 1;
}